rlctbg/raylib.py


_rl.GetMonitorCount.argtypes = []
_rl.GetMonitorCount.restype = c_int
def get_monitor_count() -> int:
    return _rl.GetMonitorCount()


_rl.GetMonitorWidth.argtypes = [c_int]
_rl.GetMonitorWidth.restype = c_int
def get_monitor_width(monitor: int) -> int:
    return _rl.GetMonitorWidth(monitor)


_rl.GetMonitorHeight.argtypes = [c_int]
_rl.GetMonitorHeight.restype = c_int
def get_monitor_height(monitor: int) -> int:
    return _rl.GetMonitorHeight(monitor)


_rl.GetMonitorPhysicalWidth.argtypes = [c_int]
_rl.GetMonitorPhysicalWidth.restype = c_int
def get_monitor_physical_width(monitor: int) -> int:
    return _rl.GetMonitorPhysicalWidth(monitor)


_rl.GetMonitorPhysicalHeight.argtypes = [c_int]
_rl.GetMonitorPhysicalHeight.restype = c_int
def get_monitor_physical_height(monitor: int) -> int:
    return _rl.GetMonitorPhysicalHeight(monitor)


_rl.GetWindowPosition.argtypes = []
_rl.GetWindowPosition.restype = Vector2
def get_window_position() -> Vector2:
    return _rl.GetWindowPosition()


_rl.GetMonitorName.argtypes = [c_int]
_rl.GetMonitorName.restype = c_char_p
def get_monitor_name(monitor: int) -> bytes:
    return _rl.GetMonitorName(monitor)


_rl.GetClipboardText.argtypes = []
_rl.GetClipboardText.restype = c_char_p
def get_clipboard_text() -> bytes:
    return _rl.GetClipboardText()


_rl.SetClipboardText.argtypes = [c_char_p]
_rl.SetClipboardText.restype = None
def set_clipboard_text(text: bytes) -> None:
    _rl.SetClipboardText(text)


_rl.ShowCursor.argtypes = []
_rl.ShowCursor.restype = None
def show_cursor() -> None:
    _rl.ShowCursor()


_rl.HideCursor.argtypes = []
_rl.HideCursor.restype = None
def hide_cursor() -> None:
    _rl.HideCursor()


_rl.IsCursorHidden.argtypes = []
_rl.IsCursorHidden.restype = c_bool
def is_cursor_hidden() -> bool:
    return _rl.IsCursorHidden()


_rl.EnableCursor.argtypes = []
_rl.EnableCursor.restype = None
def enable_cursor() -> None:
    _rl.EnableCursor()


_rl.DisableCursor.argtypes = []
_rl.DisableCursor.restype = None
def disable_cursor() -> None:
    _rl.DisableCursor()


_rl.ClearBackground.argtypes = [Color]
_rl.ClearBackground.restype = None
def clear_background(color: Color) -> None:
    _rl.ClearBackground(color)


_rl.BeginDrawing.argtypes = []
_rl.BeginDrawing.restype = None
def begin_drawing() -> None:
    _rl.BeginDrawing()


_rl.EndDrawing.argtypes = []
_rl.EndDrawing.restype = None
def end_drawing() -> None:
    _rl.EndDrawing()


_rl.BeginMode2D.argtypes = [Camera2D]
_rl.BeginMode2D.restype = None
def begin_mode2_d(camera: Camera2D) -> None:
    _rl.BeginMode2D(camera)


_rl.EndMode2D.argtypes = []
_rl.EndMode2D.restype = None
def end_mode2_d() -> None:
    _rl.EndMode2D()


_rl.BeginMode3D.argtypes = [Camera3D]
_rl.BeginMode3D.restype = None
def begin_mode3_d(camera: Camera3D) -> None:
    _rl.BeginMode3D(camera)


_rl.EndMode3D.argtypes = []
_rl.EndMode3D.restype = None
def end_mode3_d() -> None:
    _rl.EndMode3D()


_rl.BeginTextureMode.argtypes = [RenderTexture2D]
_rl.BeginTextureMode.restype = None
def begin_texture_mode(target: RenderTexture2D) -> None:
    _rl.BeginTextureMode(target)


_rl.EndTextureMode.argtypes = []
_rl.EndTextureMode.restype = None
def end_texture_mode() -> None:
    _rl.EndTextureMode()


_rl.BeginScissorMode.argtypes = [c_int, c_int, c_int, c_int]
_rl.BeginScissorMode.restype = None
def begin_scissor_mode(x: int, y: int, width: int, height: int) -> None:
    _rl.BeginScissorMode(x, y, width, height)


_rl.EndScissorMode.argtypes = []
_rl.EndScissorMode.restype = None
def end_scissor_mode() -> None:
    _rl.EndScissorMode()


_rl.GetMouseRay.argtypes = [Vector2, Camera]
_rl.GetMouseRay.restype = Ray
def get_mouse_ray(mouse_position: Vector2, camera: Camera) -> Ray:
    return _rl.GetMouseRay(mouse_position, camera)


_rl.GetCameraMatrix.argtypes = [Camera]
_rl.GetCameraMatrix.restype = Matrix
def get_camera_matrix(camera: Camera) -> Matrix:
    return _rl.GetCameraMatrix(camera)


_rl.GetCameraMatrix2D.argtypes = [Camera2D]
_rl.GetCameraMatrix2D.restype = Matrix
def get_camera_matrix2_d(camera: Camera2D) -> Matrix:
    return _rl.GetCameraMatrix2D(camera)


_rl.GetWorldToScreen.argtypes = [Vector3, Camera]
_rl.GetWorldToScreen.restype = Vector2
def get_world_to_screen(position: Vector3, camera: Camera) -> Vector2:
    return _rl.GetWorldToScreen(position, camera)


_rl.GetWorldToScreen2D.argtypes = [Vector2, Camera2D]
_rl.GetWorldToScreen2D.restype = Vector2
def get_world_to_screen2_d(position: Vector2, camera: Camera2D) -> Vector2:
    return _rl.GetWorldToScreen2D(position, camera)


_rl.GetScreenToWorld2D.argtypes = [Vector2, Camera2D]
_rl.GetScreenToWorld2D.restype = Vector2
def get_screen_to_world2_d(position: Vector2, camera: Camera2D) -> Vector2:
    return _rl.GetScreenToWorld2D(position, camera)


_rl.SetTargetFPS.argtypes = [c_int]
_rl.SetTargetFPS.restype = None
def set_target_fps(fps: int) -> None:
    _rl.SetTargetFPS(fps)


_rl.GetFPS.argtypes = []
_rl.GetFPS.restype = c_int
def get_fps() -> int:
    return _rl.GetFPS()


_rl.GetFrameTime.argtypes = []
_rl.GetFrameTime.restype = c_float
def get_frame_time() -> float:
    return _rl.GetFrameTime()


_rl.GetTime.argtypes = []
_rl.GetTime.restype = c_double
def get_time() -> float:
    return _rl.GetTime()


_rl.ColorToInt.argtypes = [Color]
_rl.ColorToInt.restype = c_int
def color_to_int(color: Color) -> int:
    return _rl.ColorToInt(color)


_rl.ColorNormalize.argtypes = [Color]
_rl.ColorNormalize.restype = Vector4
def color_normalize(color: Color) -> Vector4:
    return _rl.ColorNormalize(color)


_rl.ColorFromNormalized.argtypes = [Vector4]
_rl.ColorFromNormalized.restype = Color
def color_from_normalized(normalized: Vector4) -> Color:
    return _rl.ColorFromNormalized(normalized)


_rl.ColorToHSV.argtypes = [Color]
_rl.ColorToHSV.restype = Vector3
def color_to_hsv(color: Color) -> Vector3:
    return _rl.ColorToHSV(color)


_rl.ColorFromHSV.argtypes = [Vector3]
_rl.ColorFromHSV.restype = Color
def color_from_hsv(hsv: Vector3) -> Color:
    return _rl.ColorFromHSV(hsv)


_rl.GetColor.argtypes = [c_int]
_rl.GetColor.restype = Color
def get_color(hex_value: int) -> Color:
    return _rl.GetColor(hex_value)


_rl.Fade.argtypes = [Color, c_float]
_rl.Fade.restype = Color
def fade(color: Color, alpha: float) -> Color:
    return _rl.Fade(color, alpha)


_rl.SetConfigFlags.argtypes = [c_uint]
_rl.SetConfigFlags.restype = None
def set_config_flags(flags: int) -> None:
    _rl.SetConfigFlags(flags)


_rl.SetTraceLogLevel.argtypes = [c_int]
_rl.SetTraceLogLevel.restype = None
def set_trace_log_level(log_type: int) -> None:
    _rl.SetTraceLogLevel(log_type)


_rl.SetTraceLogExit.argtypes = [c_int]
_rl.SetTraceLogExit.restype = None
def set_trace_log_exit(log_type: int) -> None:
    _rl.SetTraceLogExit(log_type)


_rl.SetTraceLogCallback.argtypes = [TraceLogCallback]
_rl.SetTraceLogCallback.restype = None
def set_trace_log_callback(callback: TraceLogCallback) -> None:
    _rl.SetTraceLogCallback(callback)


_rl.TraceLog.argtypes = [c_int, c_char_p]
_rl.TraceLog.restype = None
def trace_log(log_type: int, text: bytes, *args) -> None:
    _rl.TraceLog(log_type, text)


_rl.TakeScreenshot.argtypes = [c_char_p]
_rl.TakeScreenshot.restype = None
def take_screenshot(file_name: bytes) -> None:
    _rl.TakeScreenshot(file_name)


_rl.GetRandomValue.argtypes = [c_int, c_int]
_rl.GetRandomValue.restype = c_int
def get_random_value(min: int, max: int) -> int:
    return _rl.GetRandomValue(min, max)


_rl.FileExists.argtypes = [c_char_p]
_rl.FileExists.restype = c_bool
def file_exists(file_name: bytes) -> bool:
    return _rl.FileExists(file_name)


_rl.IsFileExtension.argtypes = [c_char_p, c_char_p]
_rl.IsFileExtension.restype = c_bool
def is_file_extension(file_name: bytes, ext: bytes) -> bool:
    return _rl.IsFileExtension(file_name, ext)


_rl.DirectoryExists.argtypes = [c_char_p]
_rl.DirectoryExists.restype = c_bool
def directory_exists(dir_path: bytes) -> bool:
    return _rl.DirectoryExists(dir_path)


_rl.GetExtension.argtypes = [c_char_p]
_rl.GetExtension.restype = c_char_p
def get_extension(file_name: bytes) -> bytes:
    return _rl.GetExtension(file_name)


_rl.GetFileName.argtypes = [c_char_p]
_rl.GetFileName.restype = c_char_p
def get_file_name(file_path: bytes) -> bytes:
    return _rl.GetFileName(file_path)


_rl.GetFileNameWithoutExt.argtypes = [c_char_p]
_rl.GetFileNameWithoutExt.restype = c_char_p
def get_file_name_without_ext(file_path: bytes) -> bytes:
    return _rl.GetFileNameWithoutExt(file_path)


_rl.GetDirectoryPath.argtypes = [c_char_p]
_rl.GetDirectoryPath.restype = c_char_p
def get_directory_path(file_path: bytes) -> bytes:
    return _rl.GetDirectoryPath(file_path)


_rl.GetPrevDirectoryPath.argtypes = [c_char_p]
_rl.GetPrevDirectoryPath.restype = c_char_p
def get_prev_directory_path(dir_path: bytes) -> bytes:
    return _rl.GetPrevDirectoryPath(dir_path)


_rl.GetWorkingDirectory.argtypes = []
_rl.GetWorkingDirectory.restype = c_char_p
def get_working_directory() -> bytes:
    return _rl.GetWorkingDirectory()


_rl.GetDirectoryFiles.argtypes = [c_char_p, POINTER(c_int)]
_rl.GetDirectoryFiles.restype = POINTER(c_char_p)
def get_directory_files(dir_path: bytes, count: POINTER(c_int)) -> POINTER(c_char_p):
    return _rl.GetDirectoryFiles(dir_path, count)


_rl.ClearDirectoryFiles.argtypes = []
_rl.ClearDirectoryFiles.restype = None
def clear_directory_files() -> None:
    _rl.ClearDirectoryFiles()


_rl.ChangeDirectory.argtypes = [c_char_p]
_rl.ChangeDirectory.restype = c_bool
def change_directory(dir: bytes) -> bool:
    return _rl.ChangeDirectory(dir)


_rl.IsFileDropped.argtypes = []
_rl.IsFileDropped.restype = c_bool
def is_file_dropped() -> bool:
    return _rl.IsFileDropped()


_rl.GetDroppedFiles.argtypes = [POINTER(c_int)]
_rl.GetDroppedFiles.restype = POINTER(c_char_p)
def get_dropped_files(count: POINTER(c_int)) -> POINTER(c_char_p):
    return _rl.GetDroppedFiles(count)


_rl.ClearDroppedFiles.argtypes = []
_rl.ClearDroppedFiles.restype = None
def clear_dropped_files() -> None:
    _rl.ClearDroppedFiles()


_rl.GetFileModTime.argtypes = [c_char_p]
_rl.GetFileModTime.restype = c_long
def get_file_mod_time(file_name: bytes) -> int:
    return _rl.GetFileModTime(file_name)


_rl.CompressData.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_int)]
_rl.CompressData.restype = POINTER(c_ubyte)
def compress_data(data: POINTER(c_ubyte), data_length: int, comp_data_length: POINTER(c_int)) -> POINTER(c_ubyte):
    return _rl.CompressData(data, data_length, comp_data_length)


_rl.DecompressData.argtypes = [POINTER(c_ubyte), c_int, POINTER(c_int)]
_rl.DecompressData.restype = POINTER(c_ubyte)
def decompress_data(comp_data: POINTER(c_ubyte), comp_data_length: int, data_length: POINTER(c_int)) -> POINTER(c_ubyte):
    return _rl.DecompressData(comp_data, comp_data_length, data_length)


_rl.StorageSaveValue.argtypes = [c_int, c_int]
_rl.StorageSaveValue.restype = None
def storage_save_value(position: int, value: int) -> None:
    _rl.StorageSaveValue(position, value)


_rl.StorageLoadValue.argtypes = [c_int]
_rl.StorageLoadValue.restype = c_int
def storage_load_value(position: int) -> int:
    return _rl.StorageLoadValue(position)


_rl.OpenURL.argtypes = [c_char_p]
_rl.OpenURL.restype = None
def open_url(url: bytes) -> None:
    _rl.OpenURL(url)


_rl.IsKeyPressed.argtypes = [c_int]
_rl.IsKeyPressed.restype = c_bool
def is_key_pressed(key: int) -> bool:
    return _rl.IsKeyPressed(key)


_rl.IsKeyDown.argtypes = [c_int]
_rl.IsKeyDown.restype = c_bool
def is_key_down(key: int) -> bool:
    return _rl.IsKeyDown(key)


_rl.IsKeyReleased.argtypes = [c_int]
_rl.IsKeyReleased.restype = c_bool
def is_key_released(key: int) -> bool:
    return _rl.IsKeyReleased(key)


_rl.IsKeyUp.argtypes = [c_int]
_rl.IsKeyUp.restype = c_bool
def is_key_up(key: int) -> bool:
    return _rl.IsKeyUp(key)


_rl.SetExitKey.argtypes = [c_int]
_rl.SetExitKey.restype = None
def set_exit_key(key: int) -> None:
    _rl.SetExitKey(key)

